--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
   ],
   "license": "MIT",
   "scripts": {
-    "start": ""
+    "test": "ava"
   },
   "dependencies": {},
-  "devDependencies": {}
+  "devDependencies": {
+    "ava": "1.0.0-beta.6"
+  }
 }
